Grace/tests/gibbs/errors/t149.grace
// ERROR = P1001
var x :
